vote_k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-svc
  namespace: security
  labels:
    app: vote
    tier: frontend
spec:
  selector:
    app: vote
    tier: frontend
  type: ClusterIP
  ports:
    - port: 8080
      name: vote-svcport
      targetPort: vote-port
